--- a/src/components/TodoItem.css
+++ b/src/components/TodoItem.css
@@ -21,6 +21,7 @@
   .todo-item button{
     border-radius: 5px;
     background: rgb(218, 32, 32);
+    align-items: right;
   }
   .todo-item h2 {
     color: #3a3a3a;
@@ -59,8 +60,4 @@
       font-size: 1.25rem;
     }
   
-    .todo-item__price {
-      font-size: 1.25rem;
-      padding: 0.5rem 1.5rem;
-    }
   }
